Goblin support use database in mysql's client.